# emoji_font

./: CMakeLists.txt  README.md  emoji_font.c  emoji_font_64_lite.c  idf_component.yml
emoji_64/: em64_f602.c  em64_f606.c  em64_f609.c  em64_f60a.c  em64_f60b.c  em64_f60c.c  em64_f60d.c  em64_f60e.c  em64_f60f.c  em64_f614.c  em64_f615.c  em64_f618.c  em64_f620.c  em64_f628.c  em64_f62d.c  em64_f62f.c  em64_f633.c  em64_f634.c  em64_f636.c  em64_f914.c  em64_f92a.c
include/: emoji_font.h
